force-app/main/default/objects/Journal_Entry__c/Journal_Entry__c.object-meta.xml
<CustomObject>
    <description>Object used to reflect a journal entry that has been sent to JOARK.</description>
    <label>Journal Entry</label>
    <nameField>
        <displayFormat>JE-{0000}</displayFormat>
        <label>Journal Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>