force-app/main/default/objects/Journal_Entry__c/fields/CRM_Journal_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Date__c</fullName>
    <description>States the moment in time the journal entry was submitted to the archive.</description>
    <label>Journal Date</label>
    <type>DateTime</type>
</CustomField>