force-app/main/default/objects/Journal_Entry__c/fields/CRM_Journal_Post_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Post_Type__c</fullName>
    <description>Defines the type of journal post created by archive standards</description>
    <label>Journal Post Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INNGAAENDE</fullName>
            </value>
            <value>
                <fullName>UTGAAENDE</fullName>
            </value>
            <value>
                <fullName>NOTAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>