force-app/main/default/objects/Journal_Entry__c/fields/CRM_Subtheme_Code__c.field-meta.xml
<CustomField>
    <fullName>CRM_Subtheme_Code__c</fullName>
    <description>Unique subtheme code</description>
    <formula>Subtheme__r.CRM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtheme Code</label>
    <type>Text</type>
</CustomField>