force-app/main/default/objects/Journal_Entry__c/fields/CRM_Theme_Code__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Code__c</fullName>
    <description>The unique code from common codes</description>
    <formula>Theme__r.CRM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Code</label>
    <type>Text</type>
</CustomField>