force-app/main/default/objects/Journal_Entry__c/fields/CRM_Theme_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Name__c</fullName>
    <formula>Theme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Name</label>
    <type>Text</type>
</CustomField>