force-app/main/default/objects/Journal_Entry__c/fields/Duplicate_Journal_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Journal_Entry_Id__c</fullName>
    <description>Field to set Journal Entry Id of a duplicate Journal Entry. Journal Entry Id field cannot be set as External Id is unique.</description>
    <label>Duplicate Journal Entry Id</label>
    <length>11</length>
    <type>Text</type>
</CustomField>