force-app/main/default/objects/Journal_Entry__c/fields/NAV_Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>NAV_Case_Reference__c</fullName>
    <description>Unique reference to a NAV case in a legacy system</description>
    <label>NAV Case Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>