force-app/main/default/objects/Journal_Entry__c/fields/Sender_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Sender_Receiver__c</fullName>
    <label>Sender/Receiver</label>
    <length>32</length>
    <type>Text</type>
</CustomField>