force-app/main/default/objects/Journal_Entry__c/recordTypes/IPS_Journal_Entry.recordType-meta.xml
<RecordType>
    <fullName>IPS_Journal_Entry</fullName>
    <active>true</active>
    <description>Journal entries som gjelder IPS/UO</description>
    <label>TAG Journal Entry</label>
</RecordType>