force-app/main/default/objects/Journal_Entry__c/recordTypes/TAG_Journal_Entry.recordType-meta.xml
<RecordType>
    <fullName>TAG_Journal_Entry</fullName>
    <active>true</active>
    <description>Journal entries som gjelder arbeidsgiver dialog</description>
    <label>TAG Journal Entry</label>
</RecordType>